CHANGES IN VERSION 2.11.10
--------------------------
 o Nothing yet

CHANGES IN VERSION 2.11.9
-------------------------
 o Update peaks man page with details about spectrumId, acquisitionNum
   and seqNum

CHANGES IN VERSION 2.11.8
-------------------------
 o Add contributions guide with code of conduct.
 o Update installation instructions for Mac.
 o Report the spectrum ID in the header data.frame (column spectrumId).
 o Fix in copyWriteMSData and writeMSData ensuring that MSn data is correctly
 o Import pwiz r11174 fix for mzML without <componentList> (see #113).
 
CHANGES IN VERSION 2.11.7
-------------------------
 o Nothing yet.
 o Import fix by Brian Pratt (pwiz r11174) for mzML without <componentList>
   Another way to fix #113 
 o Removing mz5 support from manual page, as currently unsupported.
 
CHANGES IN VERSION 2.11.6
-------------------------
 o runInfo returns the run start time stamp from files providing this
   information (mzML files).
 
CHANGES IN VERSION 2.11.5
-------------------------
 o writeMSData and copyWriteMSData functions enabling to export MS data to
   mzML or mzXML files.
 
CHANGES IN VERSION 2.11.4
-------------------------
 o Use full TMT file pattern to select a single file
 
CHANGES IN VERSION 2.11.3
-------------------------
 o Read ion injection time from mzML files and add it to the data.frame returned
   by the header function.
 
CHANGES IN VERSION 2.11.2
-------------------------
 o New getScanHeaderInfo and getAllScanHeaderInfo implementations for the pwiz
   backend. Fixes issue #106 and issue #216 in MSnbase.

CHANGES IN VERSION 2.11.1
-------------------------
 o Change default I/O backend from Ramp to pwiz.

CHANGES IN VERSION 2.11.0
-------------------------
 o Bioc devel 3.6
 
CHANGES IN VERSION 2.10.0
-------------------------
 o Bioc release 3.5

CHANGES IN VERSION 2.9.11
-------------------------
 o Restore -fpermissive flag on windows

CHANGES IN VERSION 2.9.10
-------------------------