@@ -1,6 +1,7 @@
 CHANGES IN VERSION 2.11.10
 --------------------------
- o Nothing yet
+ o Fix problem that can cause a SEGFAULT in writeMSData/copyWriteMSData when MS
+   data with spectra linking to missing precursor scans is saved (issue #129).
 
 CHANGES IN VERSION 2.11.9
 -------------------------
